--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
            <div class="cards">
                <div class="box">
-                   <i class="fas fa-paint-brush"></i>
+                    <i class="fas fa-bars"></i>
                    <div class="text">Data Scientist</div>
                    <p>Python,&nbsp;Numpy,&nbsp;Pandas
                      <br>Matplotlib,&nbsp;,&nbsp;LangChain,&nbsp;HuggingFace <br> LLMs,&nbsp;Seaborn</p>
@@ -85,7 +85,7 @@
 
            <div class="cards">
                <div class="box">
-                   <i class="fas fa-paint-brush"></i>
+                   <i class="fas fa-user"></i>
                    <div class="text">Web Development</div>
                    <p>HTML,&nbsp;CSS,&nbsp;JavaScript
                      <br> Node.js,&nbsp;React.js,&nbsp;Mongodb,&nbsp;Redux <br> express.js,&nbsp;Bootstrap,&nbsp;jquery,&nbsp; JSON,&nbsp;MongoDB</p>
@@ -112,7 +112,7 @@
         <div class="skill-content">
             <div class="column left">
                 <div class="text"> My skills</div>
-                <p>I have a solid experience in programming languages used for Web Development and App Development. To enhance clarity, I have incorporated graphs on the right side. </p>
+                <p>I have solid experience in programming languages and tools used for Data Science, including Python, SQL, and machine learning libraries. To enhance clarity, I’ve visualized data and insights using graphs and charts throughout my portfolio.</p>
             </div>
             <div class="column right">
                 <div class="bars">
