--- a/index.html
+++ b/index.html
@@ -162,11 +162,82 @@
     </div>
 </section>
 
-<!-- Project section start -->
+<!-- Data Science Project-->
 
 <section class="projects" id="projects">
     <div class="max-width">
-        <h2 class="title">My Projects</h2>
+        <h2 class="title">My Data Science Projects</h2>
+        <div class="carousel owl-carousel owl-theme">
+            <div class="card">
+                <a href="https://git-username-sk09032-book-recommendation-system.streamlit.app/" target="_blank">
+                        <span class="link"></span>
+                    </a>
+                <div class="box">
+                    <img src="/Images/Book_image.png" alt="image">
+                    <div class="text">Book Recommendation System</div>
+                    <p>This project is about book recommendation system based on collaborative filtering, this project uses ML model internally. </p>
+                </div>
+            </div>
+            <div class="card">
+                <a href="https://github.com/Sk09032/telegram_summarization_bot" target="_blank">
+                        <span class="link"></span>
+                    </a>
+                <div class="box">
+                    <img src="/Images/Summary_image.png" alt="image">
+                    <div class="text">Text Summarization Telegram Bot</div>
+                    <p>I created a Telegram bot that takes large inputs from users and replies with a short summary. Currently, the bot runs locally and isn’t live yet. It uses a Large Language Model (LLM) to generate the summaries. </p>
+                </div>
+            </div>
+            <div class="card">
+                <a href="https://git-username-sk09032-bert-self-fine-tuned-sentiment.streamlit.app/" target="_blank">
+                        <span class="link"></span>
+                    </a>
+                <div class="box">
+                    <img src="/Images/Sentiment_image.png" alt="image">
+                    <div class="text">Sentiment Analysis</div>
+                    <p>This is a sentiment analysis project in which I have fine-tuned a BERT model on the IMDB dataset to classify sentiments (Positive or Negative). This Fine tuned model is also available in my huggingface account (Link-> https://huggingface.co/kgpian) </p>
+                </div>
+            </div>
+            <div class="card">
+                <a href="https://git-username-sk09032-ipl-data-analysis-webapp.streamlit.app/" target="_blank">
+                        <span class="link"></span>
+                    </a>
+                <div class="box">
+                    <img src="/Images/IPL_image.png" alt="image">
+                    <div class="text">IPL data analysis web app</div>
+                    <p>This is a data analysis project i have made with Streamlit, where users can explore IPL data using filters and discover insights easily.</p>
+                </div>
+            </div>
+            <div class="card">
+                <a href="https://github.com/Sk09032/News_artical_summary" target="_blank">
+                        <span class="link"></span>
+                    </a>
+                <div class="box" >
+                    
+                    <img src="/Images/Summary_image.png" alt="image">
+                    <div class="text">Extractive text summarization app</div>
+                    <p>I created an extractive text summarization app using SpaCy to help summarize text by extracting key sentences.</p>
+                </div>
+            </div>
+            <div class="card">
+                <a href="https://github.com/Sk09032/toxicity_using_DL" target="_blank">
+                        <span class="link"></span>
+                    </a>
+                <div class="box">
+                    <img src="/Images/toxic_image.png" alt="image">
+                    <div class="text">Toxicity Classification</div>
+                    <p>I created a toxicity classification project using a Kaggle dataset, with deep learning models using TensorFlow and Keras to identify toxicity in comments.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Web development Project section start -->
+
+<section class="projects" id="projects">
+    <div class="max-width">
+        <h2 class="title">My Web Development Projects</h2>
         <div class="carousel owl-carousel owl-theme">
             <div class="card">
                 <a href="https://ecommerce-flax-nine.vercel.app/" target="_blank">
