--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                             </div>
                             <div class="field email">
                                 <input type="email" placeholder="Your Email id" name="email" required>
-                                <input type="hidden" name="_next" value="https://sk090.netlify.app/page/thankyou.html">
+                                <input type="hidden" name="_next" value="page/thankyou.html">
                                 <input type="hidden" name="_subject" value="new mail wooooo!!!">
                             </div>
                         </div>
